# wingpanel-indicator-appicontray

./: build.sh  meson.build
src/: Indicator.vala  StatusNotifierHost.vala  StatusNotifierWatcher.vala  TrayIcon.vala
